--- a/vignettes/jfa.Rmd
+++ b/vignettes/jfa.Rmd
@@ -83,7 +83,7 @@ summary(stage4)
 
 ## Data auditing
 
-The `digit.test()` function can be used to test the distribution of leading or last digits in a variable against a pre-specified distribution (e.g., Benford's law).
+The `digit_test()` function can be used to test the distribution of leading or last digits in a variable against a pre-specified distribution (e.g., Benford's law).
 
 See the package vignette [Data auditing: Get started](https://koenderks.github.io/jfa/articles/v8-data-auditing.html) for more details about **jfa**'s data auditing functionality.
 
@@ -91,16 +91,16 @@ See the package vignette [Data auditing: Get started](https://koenderks.github.i
 
 ```{r}
 # Digit distribution test
-x <- digit.test(sinoForest$value, check = "first", reference = "benford")
+x <- digit_test(sinoForest$value, check = "first", reference = "benford")
 print(x)
 plot(x)
 ```
 
-The `repeated.test()` function can be used to test the numbers in a variable for repeated values.
+The `repeated_test()` function can be used to test the numbers in a variable for repeated values.
 
 ```{r}
 # Repeated values test
-x <- repeated.test(sanitizer$value, check = "lasttwo", B = 5000)
+x <- repeated_test(sanitizer$value, check = "lasttwo", samples = 5000)
 print(x)
 plot(x)
 ```
