--- a/vignettes/v9-auditing-data-digit-analysis.Rmd
+++ b/vignettes/v9-auditing-data-digit-analysis.Rmd
@@ -20,11 +20,11 @@ library(jfa)
 
 # Auditing data: Digit analysis
 
-Welcome to the 'Digit analysis' vignette of the **jfa** package. In this vignette you are able to find detailed examples of how you can incorporate the `digit.test()` and `repeated.test()` functions provided by the package.
+Welcome to the 'Digit analysis' vignette of the **jfa** package. In this vignette you are able to find detailed examples of how you can incorporate the `digit_test()` and `repeated_test()` functions provided by the package.
 
-## Function: `digit.test()`
+## Function: `digit_test()`
 
-The function `digit.test()` takes a vector of numeric values, extract the requested digits, and compares the frequencies of these digits to a reference distribution. The function `distr.test()` performs a frequentist hypothesis test of the null hypothesis that the digits are distributed according to the reference distribution and produces a *p* value. The function `distr.btest()` performs a Bayesian hypothesis test of the null hypothesis that the digits are distributed according to the reference distribution against the alternative hypothesis (using the prior parameters specified in `alpha`) that the digits are not distributed according to the reference distribution and produces a Bayes factor (Kass & Raftery, 1995).
+The function `digit_test()` takes a vector of numeric values, extract the requested digits, and compares the frequencies of these digits to a reference distribution. The function either performs a frequentist hypothesis test of the null hypothesis that the digits are distributed according to the reference distribution and produces a *p* value or a Bayesian hypothesis test of the null hypothesis that the digits are distributed according to the reference distribution against the alternative hypothesis (using the prior parameters specified in `prior`) that the digits are not distributed according to the reference distribution and produces a Bayes factor (Kass & Raftery, 1995).
 
 *Example:*
 
@@ -32,26 +32,26 @@ Benford’s law (Benford, 1938) is a principle that describes a pattern in many 
 
 ```{r}
 # Frequentist hypothesis test
-x <- digit.test(sinoForest$value, check = "first", reference = "benford")
+x <- digit_test(sinoForest$value, check = "first", reference = "benford")
 print(x)
 plot(x)
 
 # Bayesian hypothesis test using default prior
-x <- digit.test(sinoForest$value, check = "first", reference = "benford", prior = TRUE)
+x <- digit_test(sinoForest$value, check = "first", reference = "benford", prior = TRUE)
 print(x)
 plot(x)
 ```
 
-## Function: `repeated.test()`
+## Function: `repeated_test()`
 
-The function `repeated.test()` analyzes the frequency with which values get repeated within a set of numbers. Unlike Benford's law, and its generalizations, this approach examines the entire number at once, not only the first or last digit. For the technical details of this procedure, see Simohnsohn (2019).
+The function `repeated_test()` analyzes the frequency with which values get repeated within a set of numbers. Unlike Benford's law, and its generalizations, this approach examines the entire number at once, not only the first or last digit. For the technical details of this procedure, see Simohnsohn (2019).
 
 *Example:*
 
-In this example we analyze a data set from a (retracted) paper that describes three experiments run in Chinese factories, where workers were nudged to use more hand-sanitizer. These data were shown to exhibited two classic markers of data tampering: impossibly similar means and the uneven distribution of last digits (Yu, Nelson, & Simohnson, 2018). We can use the `repeated.test()` function to test if these data also contain a greater amount of repeated values than expected if the data were not tampered with.
+In this example we analyze a data set from a (retracted) paper that describes three experiments run in Chinese factories, where workers were nudged to use more hand-sanitizer. These data were shown to exhibited two classic markers of data tampering: impossibly similar means and the uneven distribution of last digits (Yu, Nelson, & Simohnson, 2018). We can use the `repeated_test()` function to test if these data also contain a greater amount of repeated values than expected if the data were not tampered with.
 
 ```{r}
-x <- repeated.test(sanitizer$value, check = "lasttwo", B = 2000)
+x <- repeated_test(sanitizer$value, check = "lasttwo", samples = 2000)
 print(x)
 plot(x)
 ```
