--- a/man/figures/tables/Rmd/hyper.ss.Rmd
+++ b/man/figures/tables/Rmd/hyper.ss.Rmd
@@ -43,7 +43,7 @@ for(rows in 1:length(expected)){
       next
     } else {
       p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 100)) }, silent = T)
-      if(class(p) == "try-error"){
+      if(inherits(p, "try-error")){
         next 
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
@@ -94,7 +94,7 @@ for(rows in 1:length(expected)){
       next
     } else {
       p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 500)) }, silent = T)
-      if(class(p) == "try-error"){
+      if(inherits(p, "try-error")){
         next 
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
@@ -145,7 +145,7 @@ for(rows in 1:length(expected)){
       next
     } else {
       p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 1000)) }, silent = T)
-      if(class(p) == "try-error"){
+      if(inherits(p, "try-error")){
         next 
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
@@ -196,7 +196,7 @@ for(rows in 1:length(expected)){
       next
     } else {
       p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 100)) }, silent = T)
-      if(class(p) == "try-error"){
+      if(inherits(p, "try-error")){
         next 
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
@@ -247,7 +247,7 @@ for(rows in 1:length(expected)){
       next
     } else {
       p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 500)) }, silent = T)
-      if(class(p) == "try-error"){
+      if(inherits(p, "try-error")){
         next 
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
@@ -298,7 +298,7 @@ for(rows in 1:length(expected)){
       next
     } else {
       p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 1000)) }, silent = T)
-      if(class(p) == "try-error"){
+      if(inherits(p, "try-error")){
         next 
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
@@ -349,7 +349,7 @@ for(rows in 1:length(expected)){
       next
     } else {
       p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 100)) }, silent = T)
-      if(class(p) == "try-error"){
+      if(inherits(p, "try-error")){
         next 
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
@@ -400,7 +400,7 @@ for(rows in 1:length(expected)){
       next
     } else {
       p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 500)) }, silent = T)
-      if(class(p) == "try-error"){
+      if(inherits(p, "try-error")){
         next 
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
@@ -451,7 +451,7 @@ for(rows in 1:length(expected)){
       next
     } else {
       p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 1000)) }, silent = T)
-      if(class(p) == "try-error"){
+      if(inherits(p, "try-error")){
         next 
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
@@ -502,7 +502,7 @@ for(rows in 1:length(expected)){
       next
     } else {
       p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 100)) }, silent = T)
-      if(class(p) == "try-error"){
+      if(inherits(p, "try-error")){
         next 
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
@@ -553,7 +553,7 @@ for(rows in 1:length(expected)){
       next
     } else {
       p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 500)) }, silent = T)
-      if(class(p) == "try-error"){
+      if(inherits(p, "try-error")){
         next 
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
@@ -604,7 +604,7 @@ for(rows in 1:length(expected)){
       next
     } else {
       p <- try({ suppressMessages(ss <- jfa::planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 1000)) }, silent = T)
-      if(class(p) == "try-error"){
+      if(inherits(p, "try-error")){
         next 
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
